crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__array_fields.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const withArraySchema = z.object({
  tags: jsonObject(z.array(z.string())),
  scores: jsonObject(z.array(z.number())),
});
export type WithArray = z.infer<typeof withArraySchema>;
