crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__custom_header.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
// Custom header
import { z } from 'zod';

export const simpleStructSchema = z.object({
  name: z.string(),
  age: z.number(),
  active: z.boolean(),
});
export type SimpleStruct = z.infer<typeof simpleStructSchema>;
