crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__map_field.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const withMapSchema = z.object({
  data: jsonObject(z.record(z.string(), z.number())),
});
export type WithMap = z.infer<typeof withMapSchema>;
