crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__newtype_wrapper.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const newtypeWrapperSchema = z.string();
export type NewtypeWrapper = z.infer<typeof newtypeWrapperSchema>;
