crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__optional_fields.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const optionalFieldsSchema = z.object({
  required: z.string(),
  optional: z.preprocess((val) => val ?? undefined, z.string().optional()),
  optional_num: z.preprocess((val) => val ?? undefined, z.number().optional()),
});
export type OptionalFields = z.infer<typeof optionalFieldsSchema>;
